little refactoring was made

--- a/src/components/ModalWindow/ModalStyle.module.css
+++ b/src/components/ModalWindow/ModalStyle.module.css
@@ -47,3 +47,9 @@
     border-bottom: 2px #ccd7ff solid;
     color: black;
 }
+
+.footer {
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+}
