--- a/src/components/Select/SelectStyle.module.css
+++ b/src/components/Select/SelectStyle.module.css
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   background-position-y: 50%;
   background-position-x: calc(100% - 8px);
+  min-width: 55px;
 }
 
 .option {
